style.css
body {
    background-color: #257;
    font: 10pt verdana,tahoma,arial,sans-serif;
}

.alert {
    color: #8F0;
    text-align: center;
    display:block;
}

.content-wrapper {
    display:table;
    margin: 10px auto;
    padding: 10px;
    background-color: #47A;
    border: 1px solid #CCC;
}

.options {
    width: 300px;
}

#remote-information {
    white-space: nowrap;
}

#remote-information tr {
    cursor:pointer;
}

#remote-information a {
    color: #333;
    text-decoration: none;
}

#remote-information table {
    border: 1px solid white;
    border-collapse:collapse;
}

#remote-information .row0:hover,
#remote-information .row1:hover {
    background-color: lightblue;
}

#remote-information .rowh td {
    cursor:auto;
    font-weight: bold;
    color: black;
}

.rowh {
    border: 1px solid white;
    background-color: #58A;
}

#remote-information .row0 {
    background-color: #79B;
    white-space: nowrap;
}

#remote-information .row1 {
    background-color: #58A;
    white-space: nowrap;
}

#remote-information td {
    font: 10pt verdana,tahoma,arial,sans-serif;
    padding: 5px 5px;
    color: white;
}

img {
    display:block;
    text-align:center;
    margin: 0 auto 10px;
}

input {
    margin: 0;
    padding: 0;
}

.help {
    color: white;
    max-width: 300px;
    text-align: justify;
    display : none;
}

p {
    margin:0;
    padding:0;
}

a {
    color: #333;
    text-decoration: none;
}

#remote-information .unviewed td {
    color: #135;
}

